--- a/index.html
+++ b/index.html
@@ -21,6 +21,51 @@
         </a>
     </div>
 
+    <div class="preloader">
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">l</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">o</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">a</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">d</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">i</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">n</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+      <div class="preloader__wheel-wrapper">
+        <div class="preloader__wheel"><span class="preloader__content">g</span>
+          <div class="preloader__inner-wheel"></div>
+          <div class="preloader__second-inner-whell"></div>
+        </div>
+      </div>
+    </div>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
