--- a/index.html
+++ b/index.html
@@ -10,73 +10,74 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
-    </div>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
 
-    <div class="preloader">
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">l</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">o</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">a</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">d</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">i</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">n</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
-      </div>
-      <div class="preloader__wheel-wrapper">
-        <div class="preloader__wheel"><span class="preloader__content">g</span>
-          <div class="preloader__inner-wheel"></div>
-          <div class="preloader__second-inner-whell"></div>
-        </div>
+  <div class="preloader">
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">l</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
       </div>
     </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">o</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">a</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">d</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">i</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">n</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+    <div class="preloader__wheel-wrapper">
+      <div class="preloader__wheel"><span class="preloader__content">g</span>
+        <div class="preloader__inner-wheel"></div>
+        <div class="preloader__second-inner-whell"></div>
+      </div>
+    </div>
+  </div>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
